# EthicsBankReviews

./: Makefile  README.md  pyproject.toml  rinat_base.ipynb  setup.py  testing.ipynb  yura.ipynb
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Baseline_DL_CB-2.ipynb  Baseline_DL_CB_CAT.ipynb  Baseline_DL_CB_SENT.ipynb  ONLY_TEST_CATEGOR.ipynb  ONLY_TEST_SENT.ipynb  baseline.ipynb  best_base.ipynb  fine-tuning-bert-for-text-classification.ipynb  le_finale.ipynb  xgb_cat.ipynb
