[tool.poetry]
name = "hsehack-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "hsehack_2023"}]

[tool.poetry.dependencies]
python = ">=3.8.10,<3.12"
numpy = "^1.24.2"
pandas = "^2.0.0"
torch = "^2.0.0"
scipy = "^1.10.1"
transformers = "^4.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
